# CellPlateVision-Prototype

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  config.yaml  docker-compose.dev.yml  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: codeql.yaml  issue-triage.yaml  validate.yaml
docs/: prototype-roadmap.md
scripts/: benchmark_backends.py  datasets.json  download_datasets.py  smoke_test.py
src/cellplatevision/: __init__.py  __main__.py  __version__.py  analysis.py  backends.py  classify.py  cli.py  config.py  confluence.py  dish_finder.py  elab_client.py  imaging.py  pipeline.py  segmentation.py
tests/: __init__.py  generate_synthetic.py  test_analysis.py  test_backends.py  test_classify.py  test_cli.py  test_config.py  test_confluence.py  test_dish_finder.py  test_elab_client.py  test_imaging.py  test_pipeline.py  test_segmentation.py  test_synthetic.py  test_version.py
